NXP-6763: add management of the Anonymous dashboard and default user dashobard in the Admin Center

--- a/nuxeo-user-dashboard/nuxeo-user-dashboard-opensocial/pom.xml
+++ b/nuxeo-user-dashboard/nuxeo-user-dashboard-opensocial/pom.xml
@@ -19,6 +19,10 @@
       <artifactId>nuxeo-core-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-management</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.opensocial</groupId>
       <artifactId>nuxeo-opensocial-spaces</artifactId>
     </dependency>
