--- a/nuxeo-platform-audit/nuxeo-platform-audit-api/pom.xml
+++ b/nuxeo-platform-audit/nuxeo-platform-audit-api/pom.xml
@@ -27,6 +27,10 @@
       <artifactId>nuxeo-platform-query-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
