--- a/pom.xml
+++ b/pom.xml
@@ -766,6 +766,17 @@
         <version>2.1.0.SP1</version>
       </dependency>
       <dependency>
+        <groupId>net.sourceforge.yarfraw</groupId>
+        <artifactId>yarfraw</artifactId>
+        <version>0.92</version>
+        <exclusions>
+          <exclusion>
+            <groupId>javax.xml</groupId>
+            <artifactId>jaxb-api</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
         <groupId>org.jboss.seam</groupId>
         <artifactId>jboss-seam-excel</artifactId>
         <version>2.1.0.SP1</version>
@@ -1050,12 +1061,12 @@
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
-        <version>2.1.11</version>
+        <version>2.2.3</version>
       </dependency>
       <dependency>
-        <groupId>javax.xml</groupId>
+        <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
-        <version>2.1</version>
+        <version>2.2.2</version>
       </dependency>
       <dependency>
         <groupId>org.freemarker</groupId>
