--- a/nuxeo-platform-userworkspace/nuxeo-platform-userworkspace-api/pom.xml
+++ b/nuxeo-platform-userworkspace/nuxeo-platform-userworkspace-api/pom.xml
@@ -17,6 +17,14 @@
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-filemanager-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.automation</groupId>
+      <artifactId>nuxeo-automation-core</artifactId>    
+    </dependency>
   </dependencies>
 
 </project>
