--- a/nuxeo-runtime-launcher/pom.xml
+++ b/nuxeo-runtime-launcher/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2-RC2</version>
   </parent>
 
   <groupId>org.nuxeo.runtime</groupId>
