--- a/nuxeo-runtime-start/pom.xml
+++ b/nuxeo-runtime-start/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2-RC2</version>
   </parent>
 
   <artifactId>nuxeo-runtime-start</artifactId>
