--- a/nuxeo-platform-audio-core/pom.xml
+++ b/nuxeo-platform-audio-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-audio-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2-RC2</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.platform</groupId>
