--- a/nuxeo-platform-video-jsf/pom.xml
+++ b/nuxeo-platform-video-jsf/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-video-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2-RC2</version>
   </parent>
 
   <artifactId>nuxeo-platform-video-jsf</artifactId>
