--- a/nuxeo-platform-audit/nuxeo-platform-audit-core/pom.xml
+++ b/nuxeo-platform-audit/nuxeo-platform-audit-core/pom.xml
@@ -95,6 +95,18 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-directory-sql</artifactId>
+      <version>${nuxeo.services.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-directory-types-contrib</artifactId>
+      <version>${nuxeo.services.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derbyclient</artifactId>
       <scope>test</scope>
@@ -134,6 +146,12 @@
       <artifactId>nuxeo-platform-management</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>net.sf.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <scope>test</scope>
+    </dependency>
+
 
   </dependencies>
 
