--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -52,6 +50,7 @@
     <module>nuxeo-platform-users-management-compat</module>
     <module>nuxeo-platform-rendition</module>
     <module>nuxeo-platform-replication</module>
+    <module>nuxeo-apidoc-server</module>
   </modules>
 
   <repositories>
