--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/themes/palettes/galaxy-admin-backgrounds.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/themes/palettes/galaxy-admin-backgrounds.properties
@@ -1,8 +1,9 @@
 leftcolumntitle=#cccccc
 white=#ffffff
-blue.lite=#f2f7fc
+blue.light=#f2f7fc
 blue.sky=#ddeeff
 info=#f2f7fc url(${org.nuxeo.ecm.contextPath}/icons/tip.gif) 2px 3px no-repeat
+tooltip=#f2f7fc url(${org.nuxeo.ecm.contextPath}/icons/lightbulb.png) 2px 3px no-repeat scroll
 topbar=#101b3f
 footer=#2d313e
 breadcrumb=#eeeff0
@@ -12,6 +13,7 @@ maincell=#fff url(${org.nuxeo.ecm.contextPath}/img/galaxy_admin_logo.png) bottom
 tablethead=#f1f2f3
 tableevenlines=#ecf6ff
 tabiselected=#4e9ae1
+tabiselectelight=#ffffff
 subtabiselected=#dde2e7
 rss=#ff9d5c
 orange.lite=#ffd9a3
@@ -20,11 +22,13 @@ gray.lite=#e0e0e0
 selected.orange=#ffcc66
 big.blue=#2a90f6
 tip=url(${org.nuxeo.ecm.contextPath}/icons/lightbulb.png) no-repeat scroll 5px 8px #F8FCFF
-warning=#fffaec url(${org.nuxeo.ecm.contextPath}/icons/warning.gif) 4px 5px no-repeat
+warning=#ffcc33 url(${org.nuxeo.ecm.contextPath}/icons/warning.gif) 4px 5px no-repeat
 search=#fff url(${org.nuxeo.ecm.contextPath}/icons/search.gif) 2px 2px no-repeat
 clipboardcopy=#adf url(${org.nuxeo.ecm.contextPath}/icons/action_clipboard_copy.gif) no-repeat 98% 3%
 folded=#4e9ae1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/arrow_folded.gif) top left no-repeat
 unfolded=#4e9ae1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/arrow_unfolded.gif) top left no-repeat
+foldedlight=#ffffff url(${org.nuxeo.ecm.contextPath}/icons/arrow_folded.gif) top left no-repeat
+unfoldedlight=#ffffff url(${org.nuxeo.ecm.contextPath}/icons/arrow_unfolded.gif) top left no-repeat
 comment=transparent url(${org.nuxeo.ecm.contextPath}/icons/comment.gif) no-repeat 4px 4px
 required=transparent url(${org.nuxeo.ecm.contextPath}/icons/required.gif) top right no-repeat
 addmanager=transparent url(${org.nuxeo.ecm.contextPath}/img/rightsadd_bar.gif) no-repeat center
