NXP-6979: update themes with eachother changings

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
@@ -21,6 +21,7 @@ orange.odd=#fffbf2
 gray.lite=#e0e0e0
 selected.orange=#ffcc66
 big.blue=#2a90f6
+tip=url(${org.nuxeo.ecm.contextPath}/icons/lightbulb.png) no-repeat scroll 5px 8px #F8FCFF
 warning=#ffcc33 url(${org.nuxeo.ecm.contextPath}/icons/warning.gif) 4px 5px no-repeat
 search=#fff url(${org.nuxeo.ecm.contextPath}/icons/search.gif) 2px 2px no-repeat
 clipboardcopy=#adf url(${org.nuxeo.ecm.contextPath}/icons/action_clipboard_copy.gif) no-repeat 98% 3%
