add package type info

--- a/nuxeo-distribution-resources/src/main/resources/templates-common/common/config/distribution.properties
+++ b/nuxeo-distribution-resources/src/main/resources/templates-common/common/config/distribution.properties
@@ -3,3 +3,4 @@
 #org.nuxeo.distribution.server=ASSEMBLY_MUST_FILL_IT
 #org.nuxeo.distribution.version=ASSEMBLY_MUST_FILL_IT
 #org.nuxeo.distribution.date=ASSEMBLY_MUST_FILL_IT
+#org.nuxeo.distribution.package=PACKAGING_MUST_FILL_IT
