NXP-6668: Make theme style take into account css properties max-size, max-width and max-height

--- a/nuxeo-theme-html/src/main/resources/nxthemes/html/styles/css.properties
+++ b/nuxeo-theme-html/src/main/resources/nxthemes/html/styles/css.properties
@@ -57,6 +57,9 @@ margin-right=
 #
 min-width=
 min-height=
+max-size=
+max-width=
+max-height=
 overflow=[visible|hidden|scroll|auto]
 # padding
 padding=
