NXP-7020: Update tabs and subtabs styles

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-colors.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-colors.properties
@@ -6,10 +6,10 @@ summary.titles=#848484
 foldablebox.titles=#ffffff
 foldablelightbox.titles=#666666
 tableheader=#666666
-tabslink=#0066cc
-tablink.active=#ffffff
-subtabslink=#0066cc
-subtablink.active=#5c5c5c
+tabslink=#7a7a7a
+tablink.active=#000
+subtabslink=#7a7a7a
+subtablink.active=#333
 buttons=#333333
 buttons.hover=#000000
 buttons.disabled=#92999e
