--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
@@ -12,7 +12,8 @@ disabled=#ebeff4 url(${org.nuxeo.ecm.contextPath}/img/button_disabled.gif) 0 0 r
 maincell=#fff url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/galaxy_logo.png) bottom right no-repeat
 tablethead=#f1f2f3
 tableevenlines=#ecf6ff
-tabiselected=#4e9ae1
+tabiselected=#fff
+tabisunselected=#f6f6f6
 tabiselectelight=#ffffff
 subtabiselected=#dde2e7
 rss=#ff9d5c
