--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-borders.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-borders.properties
@@ -5,12 +5,12 @@ leftcolumn=1px solid #e3e5e7
 lefcolumntitle=1px solid #9e9e9e
 buttons=1px solid #bfc5cb
 buttons.hover=1px solid #a3a3a3
-tabiselected=1px solid #4e9ae1
-tabisnotselected=1px solid #c0dcf5
-subtabinotselected=1px solid #dde2e7
-subtabiselected=1px solid #dde2e7
-subtabsbar=3px solid #dde2e7
-tabsbar=6px solid #4e9ae1
+tabiselected=1px solid #a7a7a7
+tabisnotselected=1px solid #f6f6f6
+subtabinotselected=1px solid #f6f6f6
+subtabiselected=1px solid #ddd
+subtabsbar=1px solid #ddd
+tabsbar=1px solid #a7a7a7
 tablelines=1px solid #c7c7c7
 breadcrumb=1px solid #e3e5e7
 warningfeedback=2px solid #666
