NXP-7021: add icons and update styles in User Center tab

--- a/nuxeo-user-center/src/main/resources/themes/palettes/galaxy-user-center-backgrounds.properties
+++ b/nuxeo-user-center/src/main/resources/themes/palettes/galaxy-user-center-backgrounds.properties
@@ -1,4 +1,5 @@
 leftcolumntitle=#cccccc
+leftcolumn=#bcf2f4 url(${org.nuxeo.ecm.contextPath}/img/left_column_bg.png) top right repeat-y
 white=#ffffff
 blue.light=#f2f7fc
 blue.sky=#ddeeff
