--- a/pom.xml
+++ b/pom.xml
@@ -127,13 +127,13 @@
       <dependency>
         <groupId>org.nuxeo.build</groupId>
         <artifactId>nuxeo-distribution-tools</artifactId>
-        <version>1.7.0</version>
+        <version>1.8.0</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.nuxeo</groupId>
         <artifactId>nuxeo-ftest</artifactId>
-        <version>1.4-SNAPSHOT</version>
+        <version>1.4</version>
         <type>zip</type>
         <scope>provided</scope>
       </dependency>
@@ -2500,7 +2500,7 @@
         <plugin>
           <groupId>org.nuxeo.build</groupId>
           <artifactId>nuxeo-distribution-tools</artifactId>
-          <version>1.8-SNAPSHOT</version>
+          <version>1.8</version>
           <extensions>true</extensions>
         </plugin>
         <!-- Cannot upgrade after 2.2-beta-1 because of MASSEMBLY-285 -->
@@ -2701,20 +2701,18 @@
               </execution>
             </executions>
           </plugin>
-          <!-- Temporarily deactivate to allow SNAPSHOT artifacts and plugins before
-            final release -->
-          <!-- <plugin> -->
-          <!-- <groupId>org.apache.maven.plugins</groupId> -->
-          <!-- <artifactId>maven-enforcer-plugin</artifactId> -->
-          <!-- <executions> -->
-          <!-- <execution> -->
-          <!-- <id>enforce-plugin-versions</id> -->
-          <!-- <goals> -->
-          <!-- <goal>enforce</goal> -->
-          <!-- </goals> -->
-          <!-- </execution> -->
-          <!-- </executions> -->
-          <!-- </plugin> -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>enforce-plugin-versions</id>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
     </profile>
