NXP-7028 upgrading JBoss4 dependencies

--- a/nuxeo-runtime-osgi/pom.xml
+++ b/nuxeo-runtime-osgi/pom.xml
@@ -23,17 +23,23 @@
       <artifactId>osgi-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>jboss</groupId>
-      <artifactId>jboss-system</artifactId>
+      <groupId>org.jboss.jbossas</groupId>
+      <artifactId>jboss-as-system</artifactId>
     </dependency>
     <dependency>
-      <groupId>jboss</groupId>
-      <artifactId>jboss-common</artifactId>
+      <groupId>org.jboss.jbossas</groupId>
+      <artifactId>jboss-as-system-jmx</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.jboss</groupId>
+      <artifactId>jboss-common-core</artifactId>
+    </dependency>
+<!--
     <dependency>
       <groupId>jboss</groupId>
       <artifactId>jboss-jmx</artifactId>
     </dependency>
+ -->
   </dependencies>
 
 </project>
