--- a/nuxeo-runtime-remoting/pom.xml
+++ b/nuxeo-runtime-remoting/pom.xml
@@ -30,13 +30,9 @@
       <artifactId>osgi-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>jboss</groupId>
-      <artifactId>jboss-remoting</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>jboss</groupId>
-      <artifactId>jboss-common</artifactId>
+      <groupId>org.jboss.jbossas</groupId>
+      <artifactId>jboss-as-jbossas-remoting</artifactId>
+      <version>5.1.0.GA</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
