--- a/nuxeo-runtime-scripting/pom.xml
+++ b/nuxeo-runtime-scripting/pom.xml
@@ -105,7 +105,7 @@
     </dependency>
 
     <dependency>
-      <groupId>jboss</groupId>
+      <groupId>org.jboss.remoting</groupId>
       <artifactId>jboss-remoting</artifactId>
     </dependency>
   </dependencies>
