--- a/nuxeo-platform-web-common/pom.xml
+++ b/nuxeo-platform-web-common/pom.xml
@@ -101,7 +101,7 @@
       <version>3.0.1</version>
     </dependency>
     <dependency>
-      <groupId>jboss</groupId>
+      <groupId>org.jboss.remoting</groupId>
       <artifactId>jboss-remoting</artifactId>
     </dependency>
 
