NXP-7022, NXP-7029, NXS-548: Update login screen background, add padding in tabs and clean themes for studio

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-borders.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-borders.properties
@@ -12,6 +12,9 @@ subtabiselected=1px solid #ddd
 subtabsbar=1px solid #ddd
 tabsbar=1px solid #a7a7a7
 tablelines=1px solid #c7c7c7
+summary.noteBlock=1px solid #d7d7d7
+summary.actions=1px solid #dedede
+layoutselected.icon=1px solid #aaa
 breadcrumb=1px solid #e3e5e7
 warningfeedback=2px solid #666
 preview=1px solid #333
@@ -26,3 +29,12 @@ orange=1px solid #ff9933
 summary=1px solid #a9a9a9
 dotted=1px dotted #999
 clipboard=2px solid #e7e7e7
+header.userMenuList=1px solid #e0e0e0
+foldableBox.actions=1px solid #cecece
+foldablebox.titlesDisabled=1px solid #d2d2d2
+genericPopUp=1px solid #b5bcc6
+genericPopUp.title=1px dotted #dedede
+faceted.actionBar=1px solid #cacaca
+faceted.block=1px solid #f1f1f1
+faceted.widget=1px solid #dcdcdc
+noborder=1px solid #ffffff
