--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-colors.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-colors.properties
@@ -1,15 +1,22 @@
 header.text=#cecece
 header.link=#ffffff
+header.userMenu=#7693a3
+header.userMenuHover=#000000
+header.mainTabs=#d7e3f1
+header.mainTabsHover=#ffffff
+header.mainTabsSelected=#000000
 breadcrumblink=#666666
 titles=#5c5c5c
 summary.titles=#848484
 foldablebox.titles=#ffffff
+foldablebox.titlesDisabled=#555555
+foldablebox.actions=#333333
 foldablelightbox.titles=#666666
 tableheader=#666666
 tabslink=#7a7a7a
 tablink.active=#000
 subtabslink=#7a7a7a
-subtablink.active=#333
+subtablink.active=#333333
 buttons=#333333
 buttons.hover=#000000
 buttons.disabled=#92999e
@@ -23,4 +30,5 @@ navigation.control=#666666
 clipboard.message=#666666
 comments.details=#666666
 syndication.link=#ffffff
-footer.text=#5c5c5c
+faceted.default=#323232
+footer.text=#9a9a9a
