--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
@@ -29,8 +29,19 @@ clipboardcopy=#adf url(${org.nuxeo.ecm.contextPath}/icons/action_clipboard_copy.
 folded=#4e9ae1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/arrow_folded.gif) top left no-repeat
 unfolded=#4e9ae1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/arrow_unfolded.gif) top left no-repeat
 foldedlight=#ffffff url(${org.nuxeo.ecm.contextPath}/icons/arrow_folded.gif) top left no-repeat
+foldedDisabled=#d2d2d2 none
+foldableBox.action=#efefef
 unfoldedlight=#ffffff url(${org.nuxeo.ecm.contextPath}/icons/arrow_unfolded.gif) top left no-repeat
 comment=transparent url(${org.nuxeo.ecm.contextPath}/icons/comment.gif) no-repeat 4px 4px
 required=transparent url(${org.nuxeo.ecm.contextPath}/icons/required.gif) top right no-repeat
 addmanager=transparent url(${org.nuxeo.ecm.contextPath}/img/rightsadd_bar.gif) no-repeat center
 back=transparent url(${org.nuxeo.ecm.contextPath}/icons/arrow_left.gif) 3px 1px no-repeat
+header.userMenu=url(${org.nuxeo.ecm.contextPath}/icons/user.png) no-repeat scroll 3px center transparent
+footer.twittLink=transparent url(${org.nuxeo.ecm.contextPath}/icons/icones-metanav.png) no-repeat left top
+footer.linkedInLink=transparent url(${org.nuxeo.ecm.contextPath}/icons/icones-metanav.png) no-repeat -16px top
+header.userListLinkHover=#ccf1ff
+header.mainTabs=#207594
+header.mainTabsSelected=#ffffff
+genericPopUp.title=#f6f8ff
+faceted.selector=#ecf6ff
+faceted.title=#f1f2f3
