NXS-554: Update styles and prepare it for Studio

--- a/nuxeo-user-center/src/main/resources/themes/palettes/galaxy-user-center-backgrounds.properties
+++ b/nuxeo-user-center/src/main/resources/themes/palettes/galaxy-user-center-backgrounds.properties
@@ -10,10 +10,11 @@ footer=#2d313e
 breadcrumb=#eeeff0
 buttons=#cecfd1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/buttons.png) top left repeat-x
 disabled=#ebeff4 url(${org.nuxeo.ecm.contextPath}/img/button_disabled.gif) 0 0 repeat-x
-maincell=#fff url(${org.nuxeo.ecm.contextPath}/img/galaxy_logo.png) bottom right no-repeat
+maincell=#fff url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/galaxy_logo.png) bottom right no-repeat
 tablethead=#f1f2f3
 tableevenlines=#ecf6ff
-tabiselected=#4e9ae1
+tabiselected=#ffffff
+tabisunselected=#f6f6f6
 tabiselectelight=#ffffff
 subtabiselected=#dde2e7
 rss=#ff9d5c
@@ -29,8 +30,20 @@ clipboardcopy=#adf url(${org.nuxeo.ecm.contextPath}/icons/action_clipboard_copy.
 folded=#4e9ae1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/arrow_folded.gif) top left no-repeat
 unfolded=#4e9ae1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/arrow_unfolded.gif) top left no-repeat
 foldedlight=#ffffff url(${org.nuxeo.ecm.contextPath}/icons/arrow_folded.gif) top left no-repeat
+foldedDisabled=#d2d2d2 none
+foldableBox.action=#efefef
 unfoldedlight=#ffffff url(${org.nuxeo.ecm.contextPath}/icons/arrow_unfolded.gif) top left no-repeat
 comment=transparent url(${org.nuxeo.ecm.contextPath}/icons/comment.gif) no-repeat 4px 4px
 required=transparent url(${org.nuxeo.ecm.contextPath}/icons/required.gif) top right no-repeat
 addmanager=transparent url(${org.nuxeo.ecm.contextPath}/img/rightsadd_bar.gif) no-repeat center
 back=transparent url(${org.nuxeo.ecm.contextPath}/icons/arrow_left.gif) 3px 1px no-repeat
+header.userMenu=url(${org.nuxeo.ecm.contextPath}/icons/user.png) no-repeat scroll 3px center transparent
+footer.twittLink=transparent url(${org.nuxeo.ecm.contextPath}/icons/icones-metanav.png) no-repeat left top
+footer.linkedInLink=transparent url(${org.nuxeo.ecm.contextPath}/icons/icones-metanav.png) no-repeat -16px top
+header.userListLinkHover=#ccf1ff
+header.mainTabs=#207594
+header.mainTabsSelected=#ffffff
+leftTabs.li=#edfcfd
+leftTabs.liSelected=#ffffff
+leftTabs.liHover=#f7feff
+actionBar=#efefef
