NXS-548: clean themes for studio

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/themes/palettes/galaxy-admin-borders.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/themes/palettes/galaxy-admin-borders.properties
@@ -1,16 +1,19 @@
 whitethin=1px solid #ffffff
 footer=1px solid #292929
-leftcolumn=1px solid #e3e5e7
+leftcolumn=1px solid #aac4d9
 lefcolumntitle=1px solid #9e9e9e
 buttons=1px solid #bfc5cb
 buttons.hover=1px solid #a3a3a3
-tabiselected=1px solid #4e9ae1
-tabisnotselected=1px solid #c0dcf5
-subtabinotselected=1px solid #dde2e7
-subtabiselected=1px solid #dde2e7
-subtabsbar=3px solid #dde2e7
-tabsbar=6px solid #4e9ae1
+tabiselected=1px solid #a7a7a7
+tabisnotselected=1px solid #f6f6f6
+subtabinotselected=1px solid #f6f6f6
+subtabiselected=1px solid #ddd
+subtabsbar=1px solid #ddd
+tabsbar=1px solid #a7a7a7
 tablelines=1px solid #c7c7c7
+summary.noteBlock=1px solid #d7d7d7
+summary.actions=1px solid #dedede
+layoutselected.icon=1px solid #aaa
 breadcrumb=1px solid #e3e5e7
 warningfeedback=2px solid #666
 preview=1px solid #333
@@ -25,3 +28,16 @@ orange=1px solid #ff9933
 summary=1px solid #a9a9a9
 dotted=1px dotted #999
 clipboard=2px solid #e7e7e7
+header.userMenuList=1px solid #e0e0e0
+foldableBox.actions=1px solid #cecece
+foldablebox.titlesDisabled=1px solid #d2d2d2
+genericPopUp=1px solid #b5bcc6
+genericPopUp.title=1px dotted #dedede
+faceted.actionBar=1px solid #cacaca
+faceted.block=1px solid #f1f1f1
+faceted.widget=1px solid #dcdcdc
+noborder=1px solid #ffffff
+leftTabs.li=1px solid #aac4d9
+leftTabs.liSelected=#aac4d9 #fff #aac4d9 #aac4d9
+leftTabs.liHover=#f7feff
+actionBar=1px solid #bde7F3
