--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/themes/palettes/galaxy-admin-colors.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/themes/palettes/galaxy-admin-colors.properties
@@ -1,14 +1,22 @@
 header.text=#cecece
 header.link=#ffffff
+header.userMenu=#7693a3
+header.userMenuHover=#000000
+header.mainTabs=#d7e3f1
+header.mainTabsHover=#ffffff
+header.mainTabsSelected=#000000
 breadcrumblink=#666666
 titles=#5c5c5c
 summary.titles=#848484
 foldablebox.titles=#ffffff
+foldablebox.titlesDisabled=#555555
+foldablebox.actions=#333333
+foldablelightbox.titles=#666666
 tableheader=#666666
-tabslink=#0066cc
-tablink.active=#ffffff
-subtabslink=#0066cc
-subtablink.active=#5c5c5c
+tabslink=#7a7a7a
+tablink.active=#000
+subtabslink=#7a7a7a
+subtablink.active=#333333
 buttons=#333333
 buttons.hover=#000000
 buttons.disabled=#92999e
@@ -22,4 +30,8 @@ navigation.control=#666666
 clipboard.message=#666666
 comments.details=#666666
 syndication.link=#ffffff
-footer.text=#5c5c5c
+faceted.default=#323232
+footer.text=#9a9a9a
+leftTabs.listLinks=#8c8c8c
+leftTabs.liSelected=#212121
+leftTabs.liHover=#555555
