--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
@@ -14,7 +14,7 @@ tablethead=#f1f2f3
 tableevenlines=#ecf6ff
 tabiselected=#ffffff
 tabisunselected=#f6f6f6
-tabiselectelight=#ffffff
+tabiselectedlight=#ffffff
 subtabiselected=#dde2e7
 rss=#ff9d5c
 orange.lite=#ffd9a3
