--- a/nuxeo-automation/nuxeo-automation-features/pom.xml
+++ b/nuxeo-automation/nuxeo-automation-features/pom.xml
@@ -19,6 +19,10 @@
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-persistence</artifactId>
+    </dependency>
     <!-- for uid generator function-->
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
