--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0"?>
-<project name="nuxeo-platform-error-web" default="deploy" basedir=".">
+<project name="nuxeo-platform-forms-layout-demo" default="web-tomcat"
+  basedir=".">
 
   <!-- Create a build.properties file from build.properties.sample
     if you wish to override the JBoss paths -->
   <property file="build.properties" />
+
+  <property name="mvn.opts" value="" />
+
   <property name="jboss.dir" value="/opt/jboss" />
   <property name="jboss.config" value="default" />
-  <property name="mvn.opts" value="" />
+  <property name="jboss.server" value="${jboss.dir}/server/${jboss.config}" />
+  <property name="jboss.deploy" value="${jboss.server}/deploy" />
+  <property name="jboss.lib" value="${jboss.server}/lib" />
+  <property name="jboss.nuxeo.ear" value="${jboss.deploy}/nuxeo.ear" />
+  <property name="jboss.bundles.dir" value="${jboss.nuxeo.ear}/bundles" />
+  <property name="jboss.nuxeo.war.dir" value="${jboss.nuxeo.ear}/nuxeo.war" />
+  <property name="jboss.seam.hotdeploy.dir"
+    value="${jboss.nuxeo.war.dir}/WEB-INF/dev" />
+
+  <property name="tomcat.dir" value="/opt/tomcat" />
+  <property name="tomcat.nuxeo.ear" value="${tomcat.dir}/nxserver" />
+  <property name="tomcat.bundles.dir" value="${tomcat.nuxeo.ear}/bundles" />
+  <property name="tomcat.nuxeo.war.dir"
+    value="${tomcat.dir}/nxserver/nuxeo.war" />
+  <property name="tomcat.seam.hotdeploy.dir"
+    value="${tomcat.nuxeo.war.dir}/WEB-INF/dev" />
 
   <property name="javac.debug" value="true" />
   <property name="javac.deprecation" value="false" />
@@ -75,13 +94,25 @@
     </copy>
   </target>
 
-  <target name="web" description="Copy web files to a live JBoss"
-    depends="setproperties">
-    <copy todir="${deploy.dir}/nuxeo.ear/nuxeo.war" failonerror="false">
-      <fileset dir="${basedir}/src/main/resources/web/nuxeo.war/" />
+  <target name="web-jboss"
+    description="Deploy Web components to the live JBoss server">
+    <copy todir="${jboss.nuxeo.war.dir}">
+      <fileset dir="${basedir}/src/main/resources/web/nuxeo.war" />
     </copy>
     <copy
       todir="${jboss.server}/data/NXRuntime/web/modules/org.nuxeo.ecm.platform.error.web/"
+      failonerror="true">
+      <fileset dir="${basedir}/src/main/resources/" includes="skin/" />
+    </copy>
+  </target>
+
+  <target name="web-tomcat"
+    description="Deploy Web components to the live Tomcat server">
+    <copy todir="${tomcat.nuxeo.war.dir}">
+      <fileset dir="${basedir}/src/main/resources/web/nuxeo.war" />
+    </copy>
+    <copy
+      todir="${tomcat.nuxeo.ear}/data/NXRuntime/web/modules/org.nuxeo.ecm.platform.error.web/"
       failonerror="true">
       <fileset dir="${basedir}/src/main/resources/" includes="skin/" />
     </copy>
