--- a/nuxeo-core-management-test/pom.xml
+++ b/nuxeo-core-management-test/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.core</groupId>
