--- a/nuxeo-distribution-base/pom.xml
+++ b/nuxeo-distribution-base/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.distribution</groupId>
     <artifactId>nuxeo-distribution</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2</version>
   </parent>
 
   <artifactId>nuxeo-distribution-base</artifactId>
