--- a/nuxeo-functional-tests/pom.xml
+++ b/nuxeo-functional-tests/pom.xml
@@ -6,7 +6,7 @@
     <!-- avoid pulling unwanted test dependencies (old webdriver) -->
     <groupId>org.nuxeo</groupId>
     <artifactId>nuxeo-ecm</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.distribution</groupId>
